<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/bClearAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:text="@string/setting_clear_cache"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/bClearLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:text="@string/setting_clear_local"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/bClearOnline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:text="@string/setting_clear_online"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/bClearDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:text="@string/setting_clear_download"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/bClearTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:text="@string/setting_clear_task"
        android:textColor="@color/colorWhite"/>
</LinearLayout>