<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_5"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgTaskThumb"
        android:layout_width="@dimen/img_50"
        android:layout_height="@dimen/img_50"
        android:layout_gravity="center"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/padding_3"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="middle"
            android:textSize="@dimen/text_size_15"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTaskDoneSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_15"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" / "
                android:textSize="@dimen/text_size_15"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvTaskTotalSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_15"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/pbDetail"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:background="@drawable/processbar_style"
                android:max="100" />

            <TextView
                android:id="@+id/tvTaskPercent"
                android:layout_marginStart="@dimen/margin_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_15"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvTaskState"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_5"
        android:gravity="center"
        android:text="@string/download_finish"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:background="@drawable/selector_text_red"/>

    <TextView
        android:id="@+id/tvTaskDel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_5"
        android:gravity="center"
        android:text="@string/download_remove"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:background="@drawable/selector_text_green"/>

    <TextView
        android:id="@+id/tvTaskOpen"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_5"
        android:gravity="center"
        android:text="@string/download_open"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:background="@drawable/selector_text_blue"/>

</LinearLayout>